# dynamicio

./: .coveragerc  .flake8  .gitignore  .gitlint  .pre-commit-config.yaml  .pylintrc  .python-virtualenv  .yamllint  2.0  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  tox.ini
.circleci/: config.yml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_and_publish.yml  comment-on-task.yaml  config.yml  pr_title_checker.yml
demo/: demo.py  keyed.py  pg_demo.py  read_write_demo.py  v4source.yaml
demo/data/input/: bar.parquet  foo.csv
demo/migrations/: .gitignore  v4_schema.yaml  v5_resource.py  v5_schema.py
demo/resources/definitions/: input.yaml  staging_output.yaml  transform_output.yaml
demo/resources/schemas/input/: foo.yaml
demo/resources/schemas/processed/: final_foo.yaml
demo/src/: __init__.py  __main__.py  constants.py  environment.py  io.py  runner_selection.py
demo/src/io/: __init__.py  schemas.py
demo/src/runners/: staging.py  transform.py
demo/tests/: conftest.py  constants.py  test_pandera_validations.py  test_pipeline.py  test_runner_selection.py
demo/tests/data/input/: foo.csv
demo/tests/data/processed/expected/: final_foo.parquet
demo/tests/data/transform/expected/: staged_foo.parquet
demo/tests/runners/: test_staging.py  test_transform.py
deployment/: helmfile.yaml
deployment/conf/: values-production.yaml.gotmpl
docs/: cli.html  config.html  core.html  errors.html  index.html  metrics.html  mixins.html  validations.html
docs/config/: index.html
docs/config/pydantic/: config.html  io_resources.html  table_schema.html
docs/dynamicio/: core.html  errors.html  mixins.html  validations.html
docs/dynamicio/config/: io_config.html
docs/dynamicio/config/pydantic/: config.html  index.html  io_resources.html  table_schema.html
docs/dynamicio/mixins/: index.html  utils.html  with_kafka.html  with_local.html  with_postgres.html  with_s3.html
docs/mixins/: index.html  utils.html  with_kafka.html  with_local.html  with_postgres.html  with_s3.html
dynamicio/: __init__.py  __main__.py  base.py  cli.py  config.py  core.py  errors.py  inject.py  metrics.py  mixins.py  serde.py  utils.py  validations.py  validators.py
dynamicio/config/: __init__.py  io_config.py
dynamicio/config/pydantic/: __init__.py  config.py  environment.py  io_resources.py  table_schema.py
dynamicio/handlers/: __init__.py  file.py  kafka.py  keyed.py  postgres.py
dynamicio/handlers/file/: __init__.py  csv.py  hdf.py  json.py  parquet.py
dynamicio/handlers/s3/: __init__.py  csv.py  file.py  hdf.py  json.py  parquet.py
dynamicio/io/: __init__.py  base.py  file.py  hdf.py  kafka.py  keyed.py  postgres.py  resource.py  s3.py  serde.py
dynamicio/io/file/: __init__.py  base.py  csv.py  file.py  hdf.py  json.py  parquet.py
dynamicio/io/s3/: __init__.py  contexts.py  csv.py  hdf.py  json.py  parquet.py  s3.py
dynamicio/mixins/: __init__.py  utils.py  with_athena.py  with_kafka.py  with_local.py  with_postgres.py  with_s3.py
dynamicio/mixins/file_formats/: __init__.py  base.py  generic_pandas.py  hdf.py
dynamicio/v5_migration/: __main__.py  app.py  resource_migration.py  resource_templates.py  schema_migration.py
migration_scripts/: migrate_resource_definitions.py
tests/: conftest.py  constants.py  test_cli.py  test_config.py  test_core.py  test_errors.py  test_file_implementations.py  test_file_resource.py  test_file_resources.py  test_inject.py  test_kafka.py  test_keyed.py  test_metrics.py  test_mixins.py  test_parquet_file.py  test_postgres.py  test_resource_inject.py  test_resource_test_path_inject.py  test_serde.py  test_table_schema.py  test_uhura.py  test_uhura_sub_resource.py  test_validations.py  test_validators.py
tests/file/: test_csv.py  test_file.py  test_file_implementations.py  test_hdf.py  test_json.py  test_parquet.py  test_parquet_file.py
tests/fixtures/: sample.csv  sample.h5  sample.hdf  sample.json  sample.parquet  schemas.py
tests/mocking/: io.py  models.py
tests/resource_tests/: test_kafka.py  test_local_file.py  test_postgres.py  test_s3.py
tests/resources/: schemas.py
tests/resources/data/input/: hdf_sample.h5  json_sample.json  modified.csv  modified.parquet  multi_row_json.json  parquet_sample.csv  pg_parquet_sample.parquet  single_row_json.json  some_csv_to_read.csv  some_parquet_to_read.parquet
tests/resources/data/input/batch/not_just_hdf/: part_01.h5  part_02.h5
tests/resources/data/input/batch/not_just_parquet/: part_01.parquet
tests/resources/data/input/batch/parquet/dynamic/dir_02/: part_02.parquet
tests/resources/data/input/batch/parquet_w_empty_files/: emptyfile.parquet  fullfile.parquet
tests/resources/data/processed/: some_parquet_to_read.parquet  write_some_csv.csv
tests/resources/definitions/: external.yaml  input.yaml  processed.yaml  test_input.yaml
tests/resources/schemas/: bar.yaml  foo.yaml  pg.yaml  read_from_s3_csv.yaml  some_csv_to_read.yaml  some_hdf_to_read.yaml  some_json_to_read.yaml  some_parquet_to_read.yaml  some_pg_parquet_to_read.yaml  vessels6.yaml  write_to_s3_csv.yaml
tests/s3/: conftest.py  test_csv.py  test_hdf.py  test_json.py  test_parquet.py  test_s3.py  test_s3_implementations.py  test_s3_inject.py
tests/s3/hdf/: conftest.py  test_hdf.py  test_s3_hdf_inject.py
tests/test_mixins/: test_athena_mixin.py  test_kafka_mixins.py  test_local_mixins.py  test_mixin_utils.py  test_postgres_mixins.py  test_s3_mixins.py  test_utils.py
tests/test_regressions/: conftest.py  test_v430.py
tests/test_regressions/resources/: missing_v430_validations.yaml
tests/test_resources/file/: test_file.py  test_parquet.py
